delay tests completion for 5s to allow background workers sometime to do background work | added swag docs for signup routes
